--- a/Chap05b.ipynb
+++ b/Chap05b.ipynb
@@ -7,27 +7,7 @@
     "tags": []
    },
    "source": [
-    "# 05. Data Collection, Iterators, and Filters (Part A)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26da17d7-3c26-4ddc-840e-4e0714c556d5",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Range"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b12f9d7-2c65-4786-bc52-7ac00b7cd306",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Array"
+    "# 05. Data Collection, Iterators, and Filters (Part B)"
    ]
   },
   {
