--- a/Chap05a.ipynb
+++ b/Chap05a.ipynb
@@ -709,8 +709,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Ljava.lang.Integer;@63d278c8\n",
-      "[Ljava.lang.Integer;@63d278c8\n"
+      "[Ljava.lang.Integer;@602a433b\n",
+      "[Ljava.lang.Integer;@602a433b\n"
      ]
     }
    ],
@@ -823,6 +823,133 @@
   },
   {
    "cell_type": "markdown",
+   "id": "668b0171-3328-4dd8-831d-bee4831ef85c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Mutable arrays with immutable elements\n",
+    "이건 아무리 봐도 이 소절 제목이 조금 문제가 있다.\n",
+    "\n",
+    "    mutable arrays with immutable variables\n",
+    "    (가변 배열에 대한 불변 변수)\n",
+    "\n",
+    "이런 정도로 해야 내용과 맞아떨어지는 소절 제목이 된다.\n",
+    "\n",
+    "실제로 여기서 설명하는 내용은 배열을 `val`로 선언한 불변 변수인 경우에도\n",
+    "배열의 각 원소에 대해 인덱스로 접근해 변경 가능하다는 것이다.\n",
+    "즉, 배열이라는 객체(object)의 원소들에 대한 참조는 항상 가변(즉, mutable elements)이고\n",
+    "배열 변수를 가변/불변으로 선언하는 데서 오는 차이는 변수에 새로운 배열 객체를 변수에 재지정할 수 있는지 없는지에 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8619ded5-da4a-4c51-b5ae-aabd817f4ed3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "val arrVal = arrayOf(10,20,30)\n",
+    "var arrVar = arrayOf(11,22,33)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "94ff4e05-5e22-4f98-8a9e-1bd97e5739bd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n",
+      "[10, 2, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "println( arrVal.toList() )\n",
+    "arrVal[1] = 2 // val로 선언한 배열의 원소도 가변(mutable)\n",
+    "println( arrVal.toList() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b03c4663-e6de-48db-aa88-71f5f200d7bd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_35.jupyter.kts (1:1 - 7) Val cannot be reassigned"
+     ]
+    }
+   ],
+   "source": [
+    "arrVal = arrayOf(1,2,3,4,5) // 새로운 메모리 공간을 차지하는 배열로 재지정은 불가\n",
+    "\n",
+    "arrVal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4fbe9582-ff28-4fd9-a7d9-cf401967604e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 22, 33]\n",
+      "[11, -2, 33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "println( arrVar.toList() )\n",
+    "arrVar[1] = -2 // var로 선언한 배열의 원소도 가변(mutable)\n",
+    "println( arrVar.toList() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f6a2910f-5b99-4e75-ba8e-04888433ae30",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrVar = arrayOf(1,2,3,4,5) // 새로운 메모리 공간을 차지하는 배열로 재지정도 가능\n",
+    "\n",
+    "arrVar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "095238f7-60ea-4aec-8f34-0766a733bba5",
    "metadata": {},
    "source": [
@@ -832,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "f56f9e20-095d-42e2-943b-c2ec251ef2ff",
    "metadata": {
     "tags": []
@@ -844,7 +971,7 @@
        "[100, 200, 300, 400, 500]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "id": "83ca7c07-4c09-46d8-8642-a5c678265ebc",
    "metadata": {
     "tags": []
@@ -869,7 +996,7 @@
        "[100, 200, 300, 400, 500]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "id": "d03b5d49-deba-40ac-9cfc-e44dfdc5c4ae",
    "metadata": {
     "tags": []
@@ -892,7 +1019,7 @@
        "[99, 99, 99, 99, 99]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "17d8987c-5630-4ca7-81ed-77c79da2ddb5",
    "metadata": {
     "tags": []
@@ -939,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "id": "afc78365-4d54-4198-8d2f-c2a67a7582f9",
    "metadata": {
     "tags": []
@@ -953,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "id": "b1557eb7-b56b-474a-92e2-64992c80cc95",
    "metadata": {
     "tags": []
@@ -963,7 +1090,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Line_38.jupyter.kts (1:16 - 28) Not enough information to infer type variable T"
+      "Line_43.jupyter.kts (1:16 - 28) Not enough information to infer type variable T"
      ]
     }
    ],
@@ -981,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "7018c63c-d1e5-41b9-b63e-1f715a2d8699",
    "metadata": {
     "tags": []
@@ -994,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "id": "eecbbae9-ee9e-4e73-bd59-80cc942e2d34",
    "metadata": {
     "tags": []
@@ -1006,7 +1133,7 @@
        "[10, 20, 30, 40, 50]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "id": "eb409a37-755f-4391-9c1a-8d98a195e599",
    "metadata": {
     "tags": []
@@ -1029,7 +1156,7 @@
        "[10, 20, 30, 40, 50]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "67f33926-caca-4178-8be8-97a4d9287eed",
    "metadata": {
     "tags": []
@@ -1052,7 +1179,7 @@
        "false"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "498be77e-a323-4483-a961-76bd6d2d8948",
    "metadata": {
     "tags": []
@@ -1075,7 +1202,7 @@
        "false"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "b04d3432-9fc6-4688-8452-44e88c9901c8",
    "metadata": {
     "tags": []
@@ -1098,7 +1225,7 @@
        "true"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
